--- a/static/index.html
+++ b/static/index.html
@@ -8,18 +8,17 @@
 
 <body>
 	<!-- this is a comment in HTML -->
-	<h1>NOT Scott Klemmer</h1> <!-- h1 through h5 are headers. The higher the number, the smaller the header -->
+	<h1>Chonlada Woointranon</h1> <!-- h1 through h5 are headers. The higher the number, the smaller the header -->
 	<h4>Project Portfolio</h4>
 
 	<!-- p means paragraph -->
-	<p>Scott is an Associate Professor of Cognitive Science and Computer Science & Engineering at UC San Diego, where he is a co-founder and Associate Director of the Design Lab. He previously served as Associate Professor of Computer Science at Stanford, where he co-directed the HCI Group, held the Bredt Faculty Scholar chair, and was a founding participant in the d.school. </p>
+    <p>Hi! My name is Pam and I am currently a student double majoring in Computer Science and Management Science at University of California, San Diego.</p>
+   	<p>I am passionate about technical product and project management and web development. In my free time, I enjoy traveling around the world and exploring different cultures.</p>
 
 	<h4>Projects</h4>
 	<ol>
-		<li>Design Thinking</li>
-		<li>Needfinding</li>
-		<li>Prototyping</li>
-		<li>...</li>
+		<li>Textbook Selling Application</li>
+		<li>Doodle</li>
 	</ol>
 </body>
 </html>
