Change Info Text

--- a/static/index.html
+++ b/static/index.html
@@ -13,7 +13,7 @@
 
 	<!-- p means paragraph -->
     <p>Hi! My name is Pam and I am currently a student double majoring in Computer Science and Management Science at University of California, San Diego.</p>
-   	<p>I am passionate about technical product and project management and web development. In my free time, I enjoy traveling around the world and exploring different cultures.</p>
+   	<p>I am excited for this HCI class!</p>
 
 	<h4>Projects</h4>
 	<ol>
